# fastapi-websocket-validation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
src/fastapi-websocket-validation/: __init__.py  handler.py
src/websocket_validation/: __init__.py
