[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "websocket-validation"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A FastAPI WebSocket message validation and handling library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/websocket-validation"
"Bug Tracker" = "https://github.com/yourusername/websocket-validation/issues" 